--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,102 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css"/>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Click and Remember</title>
 
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- FAVICON -->
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/idiaz_white-favicon.png">
+
+  <!-- SCRIPTS -->
+  <!-- Link Bootstrap JS, Popper.js, and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.5/js/mdb.min.js">
+  </script>
+
+  <!-- STYLES -->
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.5/css/mdb.min.css" rel="stylesheet">
+  <!-- Linking my own CSS -->
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+
+  <!-- FONTS -->
+  <!-- Link Font Awesome 5 -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+</head>
+
+<body class=" pink lighten-5">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+
+  <header>
+    <div class="collapse pink accent-1" id="navbarHeader">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h4 class="black-text"><b>About</b></h4>
+            <p class="text-white">This page is a game. The intention of the game is see if you can click on all the
+              different images without remeating. Once you click on one image, all the cards will shuffle and will be
+              presented in a different order. Then you need to click a different image; and keep going until you click
+              on all 12 images. If you click on an image twice YOU LOOSE... Good luck!</p>
+          </div>
+          <div class="col-sm-4 offset-md-1 py-4">
+            <h4 class="black-text"><b>Contact</b></h4>
+            <ul class="list-unstyled">
+              <li><a href="https://github.com/juanidiaz/NewsScraper" class="text-white" target="new"><i
+                    class="fab fa-github"></i> Check out the GitHub files</a></li>
+              <li><a href="http://www.idiaz.ca" class="text-white"><i class="fas fa-globe" target="new"></i> Visit
+                  developer's site</a></li>
+              <li><a href="https://www.linkedin.com/in/juanidiaz/" class="text-white" target="new"><i
+                    class="fab fa-linkedin"></i> Follow developer in LinkedIn</a></li>
+              <li><a href="mailto:jdi@idiaz.ca" class="text-white"><i class="fas fa-envelope-open"></i> Email
+                  developer</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="navbar navbar-dark pink accent-4 shadow-sm">
+      <div class="container d-flex justify-content-between">
+        <a href="/" class="navbar-brand d-flex align-items-center">
+          <strong class="ml-2">GAME: Click and Remember</strong>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
+          aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+  </header>
+
+  <main role="main">
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  </main>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <footer class="white-text pink accent-4">
+    <div class="container">
+      <p class="float-right">
+        <a href="#">Back to top</a>
+      </p>
+      <p>Version 1.0</p>
+    </div>
+  </footer>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <script src="/js/index.js"></script>
+
+</body>
+
 </html>
